Fix: About Us page - Updated navbar labels - Fixed banner height for larger screens - Removed bg pattern on Mobile screens

--- a/utils/styles/custom.scss
+++ b/utils/styles/custom.scss
@@ -949,6 +949,7 @@ html {
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
+  padding-top: 3rem;
 
   // @media screen and (min-width: 1200px) {
   //   background-size: cover;
